--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
       <artifactId>hsqldb</artifactId>
       <version>2.2.8</version>
     </dependency>
+      <dependency>
+          <groupId>commons-codec</groupId>
+          <artifactId>commons-codec</artifactId>
+          <version>1.15</version>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
